# sea-orm

./: Cargo.toml
sea-orm-codegen/: Cargo.toml
