[package]
authors = ["Billy Chan <ccw.billy.123@gmail.com>"]
categories = ["database"]
description = "Code Generator for SeaORM"
documentation = "https://docs.rs/sea-orm"
edition = "2021"
homepage = "https://www.sea-ql.org/SeaORM"
keywords = ["sql", "mysql", "postgres", "sqlite"]
license = "MIT OR Apache-2.0"
name = "sea-orm-codegen"
repository = "https://github.com/SeaQL/sea-orm"
rust-version = "1.65"
version = "0.12.0"

[lib]
name = "sea_orm_codegen"
path = "src/lib.rs"

[dependencies]
heck = {version = "0.4", default-features = false}
proc-macro2 = {version = "1", default-features = false}
quote = {version = "1", default-features = false}
sea-query = {git = "https://github.com/VincentFoulon80/sea-query", branch = "feature/mysql/index-hints", features = ["thread-safe"]}
syn = {version = "1", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"]}
tracing = {version = "0.1", default-features = false, features = ["log"]}

[dev-dependencies]
pretty_assertions = {version = "0.7"}
sea-orm = {path = "../", default-features = false, features = ["macros"]}
